--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -1,3 +1,13 @@
-<div id="root">
+<% if logged_in? %>
+    <script>
+        window.currentUser = <%= render(
+            "api/users/user.json.jbuilder",
+            user: current_user
+        ).html_safe %>
+    </script>
+<% end %>
+
+
+<main id="root">
     <h2>This is broke</h2>
-</div>
+</main>
