--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,9 @@
  *= require_self
  */
 
+@import "font-awesome-sprockets";
+@import "font-awesome";
+
 @font-face {
     font-family: 'interstatebold';
     src: font-url('interstate_bold-webfont.woff2') format('woff2');
@@ -103,20 +106,10 @@
 }
 
 @font-face {
-    font-family: 'lucida_granderegular';
-    src: font-url('lucidagrande-webfont.woff2') format('woff2');
-    src: font-url('lucidagrande-webfont.woff') format('woff');
-    src: font-url('LucidaGrande.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
-    font-family: 'lucida_grandebold';
-    src: font-url('lucidagrandebold-webfont.woff2') format('woff2');
-    src: font-url('lucidagrandebold-webfont.woff') format('woff');
-    src: font-url('LucidaGrandeBold.ttf') format('truetype');
+    font-family: 'interstateextralight';
+    src: font-url('interstate_extralight_regular-webfont.woff2') format('woff2'),
+        font-url('interstate_extralight_regular-webfont.woff') format('woff'),
+        font-url('interstate_extralight_regular.otf') format('opentype');
     font-weight: normal;
     font-style: normal;
 
@@ -134,6 +127,14 @@ html {
      margin: auto 0;
  }
 
+button:focus {
+    outline: 0;
+}
+
+button:hover {
+    cursor: pointer;
+}
+
  .main-box {
     display: flex;
     position: absolute;
@@ -141,19 +142,23 @@ html {
     width: 1240px;
     left: 17%;
     right: 17%;
-    margin: auto 0;
+    margin: 0 auto;
     background-color: #FEFFFE;
+    text-align: center;
+    flex-direction: column;
  }
 
  @media only screen and (max-width: 1280px) {
      .main-box {
          display: flex;
          position: absolute;
-         margin: auto 0;
+         margin: 0 auto;
          height: 100%;
          width: 1100px;
          left: 17%;
          right: 17%;
+        text-align: center;
+        flex-direction: column;
      }
  }
 
@@ -161,10 +166,12 @@ html {
     .main-box {
         display: flex;
         position: absolute;
-        margin: auto 0;
+        margin: 0 auto;
         height: 100%;
         width: 950px;
         left: 17%;
         right: 17%;
+        text-align: center;
+        flex-direction: column;
     }
  }
