--- a/app/assets/stylesheets/welcome_navbar.scss
+++ b/app/assets/stylesheets/welcome_navbar.scss
@@ -31,10 +31,11 @@
 .hp-signup {
     display: flex;
     font-family: 'Lucida Grande';
-    font-size: 30px;
+    font-size: 14px;
+    letter-spacing: 1px;
     font-weight: 400;
     line-height: 1.3;
-    margin: 0 0 0 0;
+    margin: 13px 0 0 0;
     position: absolute;
     left: 53px;
 }
@@ -47,6 +48,41 @@
     background-repeat: no-repeat;
 }
 
+.landing-image-text {
+    margin: auto;
+    margin-top: 130px;
+    width: 65%;
+    color: #FEFFFE;
+    font-family: 'interstateextralight';
+    h1 {
+
+        font-size: 36px;
+        margin-bottom: 8px;
+        letter-spacing: 1px;
+    }
+
+    .small-landing-image-text {
+        margin: auto;
+        width: 70%;
+
+        h2 {
+            font-size: 18px;
+        }
+    }
+
+    .start-uploading-button {
+        font-family: 'interstateextralight';
+        background-color: #f50;
+        color: #FEFFFE;
+        margin-top: 20px;
+        padding: 0 17px;
+        font-size: 18px;
+        height: 46px;
+        border-radius: 3px;
+        border: 0px solid;
+    }
+}
+
 .landing-header {
     display: flex;
     justify-content: space-between;
@@ -55,13 +91,12 @@
     width: 100%;
     height: 10%;
     position: absolute;
-    margin: auto 0;
+    margin: 0 auto;
     z-index: 5;
 
     .sign-in {
-        font-family: 'Interstate Light Cond';
+        font-family: 'interstateextralight';
         font-size: 15px;
-        letter-spacing: 1px;
         padding: 2px 15px;
         height: 30px;
         line-height: 24px;
@@ -74,7 +109,8 @@
     }
 
     .create-account {
-        font-family: 'Lucida Grande';
+        font-family: 'interstateextralight';
+        font-size: 15px;
         padding: 2px 16px;
         height: 30px;
         line-height: 24px;
