Finish modal and complete user auth functionality

--- a/app/assets/stylesheets/welcome_page.scss
+++ b/app/assets/stylesheets/welcome_page.scss
@@ -4,10 +4,12 @@
 }
 
 .search-bar {
-    display: inline-block;
+    // display: inline-block;
+    // margin: auto 0;
+    // padding: 50px 0;
+    // width: 550px;
     margin: auto 0;
-    padding: 50px 0;
-    width: 550px;
+    margin-right: -18px;
 }
 
 .welcome-search-bar {
@@ -19,7 +21,7 @@
     background-color: #F1F2F1;
     padding: 15px;
     font-size: 16px;
-    width: 550px;
+    width: 580px;
     border-radius: 3px;
 }
 
@@ -29,8 +31,8 @@
 
 .s-icon {
     position: relative;
-    right: -252px;
-    top: -33px;
+    left: -36px;
+    bottom: -2px;
     font-size: 21px;
     color: #656665;
 }
@@ -40,9 +42,11 @@
 }
 
 .search-and-upload {
-    display: inline-block;
-    width: 300px;
-    margin: auto;
+    display: flex;
+    width: 100%;
+    margin: 50px 0;
+    justify-content: center;
+    align-items: center;
 }
 
 .welcome-or {
@@ -65,4 +69,10 @@
     line-height: 18px;
     border: 0px solid;
     border-style: solid;
+}
+
+.search-upload {
+    // display: inline-block;
+    // margin: auto 0;
+    // padding: 50px 0;
 }
