--- a/app/assets/stylesheets/modal.scss
+++ b/app/assets/stylesheets/modal.scss
@@ -124,6 +124,10 @@
     height: 40px;
 }
 
+.modal-submit:hover {
+    cursor: pointer;
+}
+
 .modal-sc-logo {
     background-image: url('soundcloud-large.svg');
     background-size: 250px 109px;
@@ -187,4 +191,31 @@
     margin: auto;
     padding: 10px 15px;
     height: 40px;
+}
+
+.modal-demo {
+    display: flex;
+    margin-top: 10px;
+    width: 100%;
+    height: 60px;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-demo-button {
+    width: 48%;
+    background-color: transparent;
+    color: #F50;
+    border-radius: 3px;
+    font-size: 20px;
+    line-height: 20px;
+    border: 1px solid #323332;
+    margin: auto;
+    padding: 10px 15px;
+    height: 50px;
+}
+
+.modal-demo-button:hover {
+    cursor: pointer;
+    border: 1px solid #F50;
 }
