--- a/app/assets/stylesheets/modal.scss
+++ b/app/assets/stylesheets/modal.scss
@@ -122,6 +122,7 @@
     margin: 10px 0;
     padding: 10px 15px;
     height: 40px;
+    outline: 0;
 }
 
 .modal-submit:hover {
@@ -219,3 +220,27 @@
     cursor: pointer;
     border: 1px solid #F50;
 }
+
+//errors 
+
+// .errors-div {
+//     width: 60%;
+//     height: 45px;
+//     background-color: transparent;
+//     position: relative;
+//     top: 157px;
+//     border: 1px solid red;
+//     border-radius: 6px;
+
+//     ul {
+//         width: 100%;
+//         height: 100%;
+
+//     }
+// }
+
+// .error {
+//     font-family: 'Lucida Grande';
+//     font-size: 11px;
+//     color: red;
+// }
