--- a/app/assets/stylesheets/welcome_navbar.scss
+++ b/app/assets/stylesheets/welcome_navbar.scss
@@ -46,6 +46,7 @@
     height: 450px;
     background-image: image_url("Landing-Page-Image.jpg");
     background-repeat: no-repeat;
+    z-index: 100;
 }
 
 .landing-image-text {
