--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -112,7 +112,6 @@
         font-url('interstate_extralight_regular.otf') format('opentype');
     font-weight: normal;
     font-style: normal;
-
 }
 
 html {
@@ -139,9 +138,10 @@ button:hover {
     display: flex;
     position: absolute;
     height: 100%;
-    width: 1240px;
-    left: 17%;
-    right: 17%;
+    // width: 1240px;
+    width: 64.5%;
+    left: 17.75%;
+    // right: 17%;
     margin: 0 auto;
     background-color: #FEFFFE;
     text-align: center;
@@ -154,9 +154,10 @@ button:hover {
          position: absolute;
          margin: 0 auto;
          height: 100%;
-         width: 1100px;
-         left: 17%;
-         right: 17%;
+        //  width: 1100px;
+    width: 64.5%;
+    left: 17.75%;
+        //  right: 17%;
         text-align: center;
         flex-direction: column;
      }
@@ -168,9 +169,10 @@ button:hover {
         position: absolute;
         margin: 0 auto;
         height: 100%;
-        width: 950px;
-        left: 17%;
-        right: 17%;
+        // width: 950px;
+    width: 64.5%;
+    left: 17.75%;
+        // right: 17%;
         text-align: center;
         flex-direction: column;
     }
