--- a/app/assets/stylesheets/welcome_navbar.scss
+++ b/app/assets/stylesheets/welcome_navbar.scss
@@ -43,7 +43,7 @@
 .landing-image {
     display: flex;
     width: 100%;
-    height: 450px;
+    min-height: 450px;
     background-image: image_url("Landing-Page-Image.jpg");
     background-repeat: no-repeat;
     z-index: 100;
