Rename components and add image_url tag

--- a/app/assets/stylesheets/modal.scss
+++ b/app/assets/stylesheets/modal.scss
@@ -133,7 +133,7 @@
 }
 
 .modal-sc-logo {
-    background-image: url('soundcloud-large.svg');
+    background-image: image_url('soundcloud-large.svg');
     background-size: 250px 109px;
     background-repeat: no-repeat;
     margin: 0 auto;
